Updates to JDK 11.