@@ -61,13 +61,18 @@
 						</goals>
 					</execution>
 				</executions>
-        <configuration>
-          <cleanupDaemonThreads>false</cleanupDaemonThreads>
+				<configuration>
+					<longModulepath>false</longModulepath>
+					<cleanupDaemonThreads>false</cleanupDaemonThreads>
 					<mainClass>webcam.Main</mainClass>
 					<executable>java</executable>
 					<arguments>
-            <argument>-jar</argument>
-            <argument>target/${project.artifactId}-${project.version}.jar</argument>
+						<argument>-p</argument>
+						<argument>target/lib</argument>
+						<argument>--add-modules</argument>
+						<argument>javafx.controls,javafx.swing</argument>
+						<argument>-jar</argument>
+						<argument>target/${project.artifactId}-${project.version}.jar</argument>
 					</arguments>
 				</configuration>
 			</plugin>
@@ -86,17 +91,20 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
-		<!--
 		<dependency>
-			<groupId>com.github.sarxos</groupId>
-			<artifactId>webcam-capture-driver-openimaj</artifactId>
-			<version>0.3.11</version>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-controls</artifactId>
+			<version>11</version>
 		</dependency>
-		-->
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-swing</artifactId>
+			<version>11</version>
+		</dependency>
 		<dependency>
 			<groupId>com.github.sarxos</groupId>
 			<artifactId>webcam-capture</artifactId>
-			<version>0.3.11</version>
+			<version>0.3.12</version>
 		</dependency>
 	</dependencies>
 	<licenses>
